tests/snapshots/compile__wgsl_generate_slimemold_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_mix4_amount: f32,
    u_control_mix5_amount: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
    u_control_slimemold1_bgColor: vec4f,
    u_control_slimemold1_heatmapStrength: f32,
    u_control_slimemold1_trailColor: vec4f,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
    u_opt_mix5_curve: i32,
    u_opt_mix5_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;
@group(0) @binding(2) var sampler_mirror_linear: sampler;
@group(0) @binding(3) var sampler_mirror_nearest: sampler;
@group(0) @binding(4) var sampler_repeat_linear: sampler;
@group(0) @binding(5) var sampler_repeat_nearest: sampler;
@group(0) @binding(6) var u_texture_slimemold1_trail: texture_2d<f32>;

fn slimemold1_trail(uv: vec2f) -> vec4f {
    return textureSampleLevel(u_texture_slimemold1_trail, sampler_repeat_linear, uv, 0.0);
}

fn slimemold1_color(uv: vec2f) -> vec4f {
    var c = u.u_control_slimemold1_bgColor;
    let trail = textureSampleLevel(u_texture_slimemold1_trail, sampler_repeat_linear, uv, 0.0);
    c = mix(c, u.u_control_slimemold1_trailColor, trail.r);
    return c;
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = slimemold1_trail(uv);
    let b = slimemold1_color(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

fn slimemold1_value(uv: vec2f) -> f32 {
    return textureSampleLevel(u_texture_slimemold1_trail, sampler_repeat_linear, uv, 0.0).r * u.u_control_slimemold1_heatmapStrength;
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return vec4f(slimemold1_value(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a);
}

fn mix5_output(uv: vec2f) -> vec4f {
    let a = mix4_output(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix5_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix5_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix5_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix5_output(uv);
}
