tests/snapshots/compile__wgsl_generate_spiral_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard3_color1: vec4f,
    u_control_checkerboard3_color2: vec4f,
    u_control_checkerboard3_frequency: f32,
    u_control_checkerboard4_color1: vec4f,
    u_control_checkerboard4_color2: vec4f,
    u_control_checkerboard4_frequency: f32,
    u_control_mix13_amount: f32,
    u_control_rgba12_a: f32,
    u_control_rgba12_b: f32,
    u_control_vignette10_radius: f32,
    u_control_vignette10_softness: f32,
    u_control_vignette11_radius: f32,
    u_control_vignette11_softness: f32,
    u_control_vignette5_radius: f32,
    u_control_vignette5_softness: f32,
    u_control_vignette6_radius: f32,
    u_control_vignette6_softness: f32,
    u_control_vignette7_radius: f32,
    u_control_vignette7_softness: f32,
    u_control_vignette8_radius: f32,
    u_control_vignette8_softness: f32,
    u_control_vignette9_radius: f32,
    u_control_vignette9_softness: f32,
    u_opt_mix13_curve: i32,
    u_opt_mix13_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn checkerboard3_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard3_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard3_color1;
    let c2 = u.u_control_checkerboard3_color2;
    return mix(c1, c2, checker);
}

fn checkerboard4_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard4_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard4_color1;
    let c2 = u.u_control_checkerboard4_color2;
    return mix(c1, c2, checker);
}

fn vignette5_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette5_radius;
    let softness = max(u.u_control_vignette5_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette6_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette6_radius;
    let softness = max(u.u_control_vignette6_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette7_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette7_radius;
    let softness = max(u.u_control_vignette7_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette8_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette8_radius;
    let softness = max(u.u_control_vignette8_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette9_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette9_radius;
    let softness = max(u.u_control_vignette9_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette10_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette10_radius;
    let softness = max(u.u_control_vignette10_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette11_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette11_radius;
    let softness = max(u.u_control_vignette11_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn spiral1_color(uv: vec2f) -> vec4f {
    let turns = max(vignette5_mask(uv), 0.1);
    let thickness = max(vignette6_mask(uv), 1e-4);
    let innerRadius = vignette7_mask(uv);
    let outerRadius = vignette8_mask(uv);
    let rotation = (vignette9_mask(uv)) * 2.0 * PI;
    let cuv = uv - vec2f(vignette10_mask(uv), vignette11_mask(uv));
    let cs = cos(rotation);
    let sn = sin(rotation);
    let p = vec2f(cuv.x * cs - cuv.y * sn, cuv.x * sn + cuv.y * cs);
    let angle = (atan2(p.y, p.x) + PI) / (2.0 * PI);
    let dist = length(p);
    var mask = 0.0;
    let b = (outerRadius - innerRadius) / (turns * 2.0 * PI);
    for (var w = 0; w < 20; w++) {
        if (f32(w) >= turns) { break; }
        let theta = (angle + f32(w)) * 2.0 * PI;
        let arm = innerRadius + b * theta;
        if (arm >= innerRadius && arm <= outerRadius) {
            mask = max(mask, 1.0 - smoothstep(0.0, thickness, abs(dist - arm)));
        }
    }
    return mix(checkerboard4_output(uv), checkerboard3_output(uv), mask);
}

fn spiral1_mask(uv: vec2f) -> f32 {
    let turns = max(vignette5_mask(uv), 0.1);
    let thickness = max(vignette6_mask(uv), 1e-4);
    let innerRadius = vignette7_mask(uv);
    let outerRadius = vignette8_mask(uv);
    let rotation = (vignette9_mask(uv)) * 2.0 * PI;
    let cuv = uv - vec2f(vignette10_mask(uv), vignette11_mask(uv));
    let cs = cos(rotation);
    let sn = sin(rotation);
    let p = vec2f(cuv.x * cs - cuv.y * sn, cuv.x * sn + cuv.y * cs);
    let angle = (atan2(p.y, p.x) + PI) / (2.0 * PI);
    let dist = length(p);
    var mask = 0.0;
    let b = (outerRadius - innerRadius) / (turns * 2.0 * PI);
    for (var w = 0; w < 20; w++) {
        if (f32(w) >= turns) { break; }
        let theta = (angle + f32(w)) * 2.0 * PI;
        let arm = innerRadius + b * theta;
        if (arm >= innerRadius && arm <= outerRadius) {
            mask = max(mask, 1.0 - smoothstep(0.0, thickness, abs(dist - arm)));
        }
    }
    return mask;
}

fn spiral1_angle(uv: vec2f) -> f32 {
    let turns = max(vignette5_mask(uv), 0.1);
    let thickness = max(vignette6_mask(uv), 1e-4);
    let innerRadius = vignette7_mask(uv);
    let outerRadius = vignette8_mask(uv);
    let rotation = (vignette9_mask(uv)) * 2.0 * PI;
    let cuv = uv - vec2f(vignette10_mask(uv), vignette11_mask(uv));
    let cs = cos(rotation);
    let sn = sin(rotation);
    let p = vec2f(cuv.x * cs - cuv.y * sn, cuv.x * sn + cuv.y * cs);
    let angle = (atan2(p.y, p.x) + PI) / (2.0 * PI);
    let dist = length(p);
    var mask = 0.0;
    let b = (outerRadius - innerRadius) / (turns * 2.0 * PI);
    for (var w = 0; w < 20; w++) {
        if (f32(w) >= turns) { break; }
        let theta = (angle + f32(w)) * 2.0 * PI;
        let arm = innerRadius + b * theta;
        if (arm >= innerRadius && arm <= outerRadius) {
            mask = max(mask, 1.0 - smoothstep(0.0, thickness, abs(dist - arm)));
        }
    }
    return angle;
}

fn rgba12_output(uv: vec2f) -> vec4f {
    return vec4f(spiral1_mask(uv), spiral1_angle(uv), u.u_control_rgba12_b, u.u_control_rgba12_a);
}

fn mix13_output(uv: vec2f) -> vec4f {
    let a = spiral1_color(uv);
    let b = rgba12_output(uv);
    let amt = clamp(u.u_control_mix13_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix13_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix13_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix13_output(uv);
}
